force-app/main/default/objects/PropertyEvent__e/PropertyEvent__e.object-meta.xml
<CustomObject>
    <label>PropertyDocEvent</label>
    <pluralLabel>PropertyDocEvents</pluralLabel>
</CustomObject>