force-app/main/default/objects/PropertyEvent__e/fields/DocumentStatus__c.field-meta.xml
<CustomField>
    <fullName>DocumentStatus__c</fullName>
    <label>DocumentStatus</label>
    <length>10</length>
    <type>Text</type>
</CustomField>