force-app/main/default/objects/PropertyEvent__e/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>DocumentType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>