force-app/main/default/objects/PropertyEvent__e/fields/PropertyId__c.field-meta.xml
<CustomField>
    <fullName>PropertyId__c</fullName>
    <label>PropertyId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>